# menu_maker

./: LICENSE  README.md  README.rst  maker.py  setup.cfg
src/maker/: maker.py
