[metadata]
name = menu_maker
version = 0.5.1
author = AgentNumber47
author_email = author@example.com
description = Library for generating and running menus, for use in shell (terminal) programs.
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/AgentNumber47/menu_maker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
